--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-java</artifactId>
-      <version>0.7.0-incubating</version>
+      <version>0.8.0</version>
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
@@ -75,7 +75,7 @@
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-clients</artifactId>
-      <version>0.7.0-incubating</version>
+      <version>0.8.0</version>
         <exclusions>
             <exclusion>
                 <groupId>org.slf4j</groupId>
