--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,21 @@
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
+      <artifactId>flink-api</artifactId>
+      <version>0.8.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+         </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
       <artifactId>flink-clients</artifactId>
       <version>0.8.0</version>
         <exclusions>
@@ -99,8 +114,8 @@
           <version>2.0.2</version>
           <configuration>
             <encoding>UTF-8</encoding>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.8</source>
+            <target>1.8</target>
             <optimize>true</optimize>
           </configuration>
         </plugin>
